--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -42,7 +42,7 @@ body {
   max-height: 94px;
   top: 7rem;
   left: -45%;
-  animation: logoOnLoad ease 2s;
+  animation: logoOnLoad ease-out 1s;
   animation-iteration-count: 1;
 }
 .splash {
@@ -54,7 +54,7 @@ body {
   bottom: -12rem;
   left: -30%;
 
-  animation: splashOnLoad ease 2s;
+  animation: splashOnLoad ease-out 1s;
   animation-iteration-count: 1;
 }
 
