--- a/src/components/CheckboxWithLabel/CheckboxWithLabel.module.scss
+++ b/src/components/CheckboxWithLabel/CheckboxWithLabel.module.scss
@@ -9,6 +9,13 @@
 .checkbox {
   visibility: hidden;
 }
+
+.checkbox + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+}
+
 .checkbox:checked + label::before,
 .checkbox:not(:checked) + label::before {
   position: absolute;
@@ -19,4 +26,32 @@
   border: 1px solid var(--grey300);
   background-color: #ffffff;
   border-radius: 4px;
+}
+.checkbox:checked + label::before {
+  border-color: var(--color-main-button);
+}
+
+.checkbox:checked + label:after,
+.checkbox:not(:checked) + label:after {
+  content: "";
+  position: absolute;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.checkbox:checked + label:after {
+  left: 74px;
+  margin-top: -4px;
+  width: 10px;
+  height: 5px;
+  border-radius: 1px;
+  border-left: 4px solid var(--color-main-button);
+  border-bottom: 4px solid var(--color-main-button);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
