--- a/src/components/CreateAccount/CreateAccount.module.scss
+++ b/src/components/CreateAccount/CreateAccount.module.scss
@@ -1,14 +1,10 @@
-%display-flex {
+%display-flex-col-center {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
 }
 
 .block {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-
   position: absolute;
   width: 100%;
   height: 100%;
@@ -25,14 +21,12 @@
   box-sizing: border-box;
   right: 5rem;
 
-  animation: animationOnLoad ease 2s;
+  animation: animationOnLoad ease-out 1s;
   animation-iteration-count: 1;
 }
 
 .innerBlock {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
+  @extend %display-flex-col-center;
 
   justify-content: flex-start;
   padding: 24px 0 24px 0;
