--- a/src/components/CheckboxWithLabel/CheckboxWithLabel.module.scss
+++ b/src/components/CheckboxWithLabel/CheckboxWithLabel.module.scss
@@ -1,24 +1,35 @@
 .checkboxBlock {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   gap: 10px;
   justify-content: flex-start;
   align-items: center;
+  width: fit-content;
+}
+
+.checkboxBlock {
+  p {
+    margin: 0;
+  }
 }
 
 .checkbox {
-  visibility: hidden;
+  opacity: 0;
+  position: absolute;
 }
 
-.checkbox + label {
+.checkbox:focus-within + .fakeCheckbox {
+  outline: var(--focus-outline);
+}
+
+.fakeCheckbox {
   display: inline-flex;
   align-items: center;
   user-select: none;
 }
 
-.checkbox:checked + label::before,
-.checkbox:not(:checked) + label::before {
-  position: absolute;
+.checkbox:checked + .fakeCheckbox::before,
+.checkbox:not(:checked) + .fakeCheckbox::before {
   content: "";
   left: 70px;
   width: 20px;
@@ -27,12 +38,12 @@
   background-color: #ffffff;
   border-radius: 4px;
 }
-.checkbox:checked + label::before {
+.checkbox:checked + .fakeCheckbox::before {
   border-color: var(--color-main-button);
 }
 
-.checkbox:checked + label:after,
-.checkbox:not(:checked) + label:after {
+.checkbox:checked + .fakeCheckbox:after,
+.checkbox:not(:checked) + .fakeCheckbox:after {
   content: "";
   position: absolute;
   -webkit-transition: all 0.2s ease;
@@ -41,7 +52,7 @@
   transition: all 0.2s ease;
 }
 
-.checkbox:checked + label:after {
+.checkbox:checked + .fakeCheckbox:after {
   left: 74px;
   margin-top: -4px;
   width: 10px;
