--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,17 +1,7 @@
-%eye {
-  cursor: pointer;
-  position: absolute;
-  right: 90px;
-  margin-top: 13px;
-  width: 20px;
-  height: 20px;
-}
-
 .password,
 .email {
   border-radius: 14px;
   width: 100%;
-  max-width: 480px;
   height: 100%;
   max-height: 54px;
   border: 1px solid var(--grey200);
@@ -21,7 +11,7 @@
 
 .password:focus,
 .email:focus {
-  outline: 1px solid var(--color-accent);
+  outline: var(--focus-outline);
 }
 .password:focus,
 .email::placeholder {
@@ -29,26 +19,23 @@
 }
 
 .password {
-  padding-right: 50px;
+  padding-right: 8%;
 }
 
 .passwordControl {
   position: absolute;
-  visibility: hidden;
-}
-
-.passwordLabel {
-  position: absolute;
-  right: 90px;
-  margin-top: 10px;
-}
-
-.passwordLabel::before {
-  content: "";
-  width: 30px;
-  height: 30px;
+  background: transparent;
+  border: none;
+  right: 1rem;
 }
 
 .passwordOpened {
-  @extend %eye;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+.passwordBlock {
+  position: relative;
+  display: flex;
+  align-items: center;
 }
