--- a/src/components/mainButton/MainButton.module.scss
+++ b/src/components/mainButton/MainButton.module.scss
@@ -4,8 +4,7 @@
   background-color: var(--color-main-button);
   width: 100%;
   max-width: 520px;
-  height: 100%;
-  max-height: 54px;
+  min-height: 54px;
   border: none;
   border-radius: 17px;
   font-family: var(--main-font-family);
