--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -39,3 +39,33 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 1440px) {
+  .block {
+    bottom: 0;
+    margin: 15rem 0 0;
+    padding: 45px;
+    animation: animationOnLoad ease-out 1s;
+    animation-iteration-count: 1;
+  }
+  .innerBlock {
+    gap: 15px;
+  }
+  .form {
+    gap: 15px;
+  }
+  @keyframes animationOnLoad {
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .block {
+    height: 100vh;
+    max-width: 100vw;
+    overflow: auto;
+    padding: 20px;
+  }
+  .innerBlock {
+    max-width: 100vw;
+  }
+}
