--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -5,7 +5,7 @@
 }
 
 .block {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   max-width: 620px;
@@ -19,7 +19,7 @@
   border-radius: 17px;
   padding: 70px;
   box-sizing: border-box;
-  right: 5rem;
+  right: 0;
 
   animation: animationOnLoad ease-out 1s;
   animation-iteration-count: 1;
@@ -31,7 +31,6 @@
   justify-content: flex-start;
   padding: 24px 0 24px 0;
   width: 100%;
-  height: 100%;
   max-width: 480px;
   max-height: 526px;
   gap: 40px;
@@ -70,6 +69,36 @@
   }
 
   100% {
-    right: 5rem;
+    right: 0;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .block {
+    bottom: 0;
+    margin: 15rem 0 0;
+    padding: 45px;
+    animation: animationOnLoad ease-out 1s;
+    animation-iteration-count: 1;
+  }
+  .innerBlock {
+    gap: 15px;
+  }
+  .form {
+    gap: 15px;
+  }
+  @keyframes animationOnLoad {
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .block {
+    height: 100vh;
+    max-width: 100vw;
+    overflow: auto;
+    padding: 20px;
+  }
+  .innerBlock {
+    max-width: 100vw;
   }
 }
