--- a/src/components/CreateAccount/CreateAccount.module.scss
+++ b/src/components/CreateAccount/CreateAccount.module.scss
@@ -25,6 +25,16 @@
   animation-iteration-count: 1;
 }
 
+.icon {
+  position: absolute;
+  width: 128px;
+  height: 128px;
+  top: -64px;
+  right: calc(50% - 64px);
+  border-radius: 50%;
+  background-color: var(--color-white-bg);
+}
+
 .innerBlock {
   @extend %display-flex-col-center;
 
