--- a/src/components/Selector/Selector.module.scss
+++ b/src/components/Selector/Selector.module.scss
@@ -3,7 +3,7 @@ select {
   appearance: none;
   background-color: transparent;
   border: none;
-  padding: 0;
+  padding: 0 2rem 0 0;
   margin: 0;
   width: 100%;
   font-family: inherit;
