--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -2,8 +2,6 @@
 .email {
   border-radius: 14px;
   width: 100%;
-  height: 100%;
-  max-height: 54px;
   border: 1px solid var(--grey200);
   color: var(--text);
   padding: 0.8rem 1rem;
@@ -25,7 +23,7 @@
 .passwordControl {
   position: absolute;
   background: transparent;
-  border: none;
+  border: 1px solid transparent;
   right: 1rem;
 }
 
@@ -38,6 +36,12 @@
   position: relative;
   display: flex;
   align-items: center;
+}
+
+.passwordControl:hover,
+.passwordControl:focus {
+  border: 1px solid transparent;
+  outline: none;
 }
 
 @media screen and (max-width: 1440px) {
