feat: complete pet link component

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,7 +12,7 @@
 
 .primaryButton {
   @extend %button;
-  color: var(--color-text-main-button);
+  color: var(--white-text-color);
   background-color: var(--color-main-button);
   border: none;
 }
