--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --color-main-button: #1b85f3;
-  --color-text-main-button: #ffffff;
+  --white-text-color: #ffffff;
   --color-heading: #39434f;
   --color-text: #808b9a;
   --color-link: #1b85f3;
@@ -12,7 +12,7 @@
   --grey800: #39434f;
   --color-selected-item: #d1e6ff;
   --color-white-bg: #ffffff;
-  --color-black-bg: #2a3240;
+  --black-background-color: #2a3240;
   --color-accent: #ffc542;
   --font-size-button: 1rem;
 
