--- a/src/components/PetLink/PetLink.module.scss
+++ b/src/components/PetLink/PetLink.module.scss
@@ -3,4 +3,21 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  border-radius: 0.5rem;
+  gap: 8px;
+  padding: 0.3rem;
+  max-width: 60px;
+  width: 100%;
+  overflow: hidden;
+  span {
+    font-size: 0.875rem;
+    color: var(--white-text-color);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+}
+
+.petCard:visited {
+  color: var(--white-text-color);
 }
