--- a/src/components/SideMenuItem/SideMenuItem.module.scss
+++ b/src/components/SideMenuItem/SideMenuItem.module.scss
@@ -1,6 +1,6 @@
 .menuItem {
   background: transparent;
-  color: var(--color-text-main-button);
+  color: var(--white-text-color);
   font-size: 1rem;
   border: 1px solid transparent;
   border-radius: 0.5rem;
