--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,6 +10,10 @@
   overflow: hidden;
 }
 
+%button:hover {
+  cursor: pointer;
+}
+
 .primaryButton {
   @extend %button;
   color: var(--white-text-color);
