--- a/src/router/MainScreenPage/MainScreenPage.module.scss
+++ b/src/router/MainScreenPage/MainScreenPage.module.scss
@@ -37,6 +37,10 @@
 }
 
 .rightSide {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 40px;
+  align-items: center;
   max-width: 1440px;
   width: 100%;
   background-color: var(--color-white-bg);
@@ -53,7 +57,7 @@
   text-align: center;
   width: 100%;
   max-width: 396px;
-  margin: 9.0625rem 20.75rem;
+  margin: 9.0625rem 20.75rem 0;
   h1 {
     font-size: 2.125rem;
     color: var(--grey800);
