add setting card component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --color-main-button: #1b85f3;
-  --white-text-color: #ffffff;
+  --white-color: #ffffff;
   --color-heading: #39434f;
   --color-text: #808b9a;
   --color-link: #1b85f3;
