--- a/src/router/MainScreenPage/MainScreenPage.module.scss
+++ b/src/router/MainScreenPage/MainScreenPage.module.scss
@@ -22,7 +22,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
-  color: var(--white-text-color);
+  color: var(--white-color);
   gap: 0.75rem;
   h1 {
     margin: 0;
