add settings page

--- a/src/components/CreateAccount/CreateAccount.module.scss
+++ b/src/components/CreateAccount/CreateAccount.module.scss
@@ -67,10 +67,12 @@
 .link {
   text-decoration: none;
   color: var(--color-link);
+  border: none;
 }
 
 .link:hover {
   color: var(--color-accent);
+  border: none;
 }
 
 @keyframes animationOnLoad {
