--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --color-main-button: #1b85f3;
-  --white-color: #ffffff;
+  --color-white: #ffffff;
   --color-heading: #39434f;
   --color-text: #808b9a;
   --color-link: #1b85f3;
@@ -38,6 +38,7 @@ body {
   overflow-x: hidden;
 }
 h1,
+h2,
 p,
 span,
 button,
