--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -16,7 +16,7 @@
 
 .primaryButton {
   @extend %button;
-  color: var(--white-color);
+  color: var(--color-white);
   background-color: var(--color-main-button);
   border: none;
 }
