--- a/src/components/Selector/Selector.module.scss
+++ b/src/components/Selector/Selector.module.scss
@@ -29,7 +29,7 @@ select:focus {
   display: grid;
   align-items: center;
   grid-template-areas: "select";
-  background-color: var(--white-color);
+  background-color: var(--color-white);
 }
 .selector:focus,
 .selector:focus-visible,
