--- a/src/router/MainScreenPage/MainScreenPage.module.scss
+++ b/src/router/MainScreenPage/MainScreenPage.module.scss
@@ -1,3 +1,10 @@
+.background {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 100%;
+  background: var(--black-background-color);
+}
 .mainScreenBlock {
   display: flex;
   flex-flow: row nowrap;
@@ -14,15 +21,18 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  gap: 2.625rem;
+  gap: 1.8rem;
   padding: 1.875rem;
+}
+.logo {
+  text-align: center;
 }
 
 .yourPetsBlock {
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
-  color: var(--white-color);
+  color: var(--color-white);
   gap: 0.75rem;
   h1 {
     margin: 0;
