fix: settings page styles

--- a/src/components/Selector/Selector.module.scss
+++ b/src/components/Selector/Selector.module.scss
@@ -30,6 +30,7 @@ select:focus {
   align-items: center;
   grid-template-areas: "select";
   background-color: var(--color-white);
+  font-family: var(--main-font-family);
 }
 .selector:focus,
 .selector:focus-visible,
