fix: pages styles

--- a/src/components/SettingCard/SettingCard.module.scss
+++ b/src/components/SettingCard/SettingCard.module.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 860px;
+  width: 100%;
   padding: 1rem;
   background-color: var(--color-white);
   border: 1px solid var(--grey150);
