--- a/src/router/MainScreenPage/MainScreenPage.module.scss
+++ b/src/router/MainScreenPage/MainScreenPage.module.scss
@@ -18,6 +18,8 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
+  max-width: 14rem;
+  width: 100%;
   gap: 1.8rem;
   padding: 1.875rem;
 }
