--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -16,7 +16,7 @@
   font-size: var(--font-size-button);
   font-weight: 400;
   box-shadow: 0 4px 20px #3232470a;
-  border-radius: 17px;
+  border-radius: var(--border-radius);
   padding: 70px;
   box-sizing: border-box;
   right: 0;
