--- a/src/components/CheckboxWithLabel/CheckboxWithLabel.module.scss
+++ b/src/components/CheckboxWithLabel/CheckboxWithLabel.module.scss
@@ -1,4 +1,4 @@
-.checkboxBlock {
+.container {
   display: flex;
   flex-flow: row nowrap;
   position: relative;
@@ -6,6 +6,10 @@
   justify-content: flex-start;
   align-items: center;
   width: fit-content;
+}
+
+.errorContainer {
+  @extend .container;
 }
 
 .checkboxBlock {
@@ -17,6 +21,7 @@
 .checkbox {
   opacity: 0;
   position: absolute;
+  cursor: pointer;
 }
 
 .checkbox:focus-within + .fakeCheckbox {
@@ -26,7 +31,11 @@
 .fakeCheckbox {
   display: inline-flex;
   align-items: center;
-  user-select: none;
+  cursor: pointer;
+}
+.errorContainer > .checkbox:checked + .fakeCheckbox::before,
+.errorContainer > .checkbox:not(:checked) + .fakeCheckbox::before {
+  border-color: red;
 }
 
 .checkbox:checked + .fakeCheckbox::before,
@@ -66,4 +75,16 @@
   -o-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
+}
+%helper {
+  font-size: var(--font-size-helper);
+  padding: 0 1rem;
+}
+.helper {
+  @extend %helper;
+}
+
+.error {
+  @extend %helper;
+  color: red;
 }
