--- a/src/components/CreateAccount/CreateAccount.module.scss
+++ b/src/components/CreateAccount/CreateAccount.module.scss
@@ -4,22 +4,16 @@
   align-items: center;
 }
 
-.block {
+.container {
   position: relative;
   width: 100%;
-  height: 100%;
   max-width: 620px;
-  max-height: 790px;
   background-color: var(--color-white-bg);
   color: var(--color-text);
-  font-family: var(--main-font-family);
-  font-size: var(--font-size-button);
-  font-weight: 400;
   box-shadow: 0 4px 20px #3232470a;
-  border-radius: 17px;
-  padding: 70px;
+  border-radius: var(--border-radius);
+  padding: 4.375rem 4.375rem 2.5rem;
   box-sizing: border-box;
-  right: 0;
 
   animation: animationOnLoad ease-out 1s;
   animation-iteration-count: 1;
@@ -28,51 +22,37 @@
 .icon {
   position: absolute;
   width: 128px;
-  height: 128px;
-  top: -64px;
-  right: calc(50% - 64px);
+  aspect-ratio: 1;
+  top: 0;
+  right: 50%;
+  transform: translate(50%, -50%);
   border-radius: 50%;
   background-color: var(--color-white-bg);
 }
 
-.innerBlock {
-  @extend %display-flex-col-center;
-
-  justify-content: flex-start;
-  padding: 24px 0 24px 0;
-  width: 100%;
-  max-width: 480px;
-  max-height: 526px;
-  gap: 40px;
-
-  h1 {
-    margin: 0;
-    color: var(--color-heading);
-    font-size: 34px;
-    font-weight: 700;
-  }
-  span {
-    margin: 0;
-    text-align: center;
-  }
+.title {
+  margin: 0;
+  margin-bottom: 1rem;
+  color: var(--color-heading);
+  font-size: 2rem;
+  text-align: center;
 }
+
+.description {
+  margin: 0;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
 .form {
   display: flex;
   flex-flow: column nowrap;
-  gap: 20px;
+  gap: 1rem;
   width: 100%;
-  height: 100%;
 }
 
-.link {
-  text-decoration: none;
-  color: var(--color-link);
-  border: none;
-}
-
-.link:hover {
-  color: var(--color-accent);
-  border: none;
+.haveAccount {
+  text-align: center;
 }
 
 @keyframes animationOnLoad {
@@ -92,9 +72,6 @@
     padding: 45px;
     animation: animationOnLoad ease-out 1s;
     animation-iteration-count: 1;
-  }
-  .innerBlock {
-    gap: 15px;
   }
   .form {
     gap: 15px;
