--- a/src/router/SignUpPage/SignUpPage.module.scss
+++ b/src/router/SignUpPage/SignUpPage.module.scss
@@ -1,6 +1,6 @@
 @import "/src/styles.scss";
 
-.block {
+.container {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -16,11 +16,10 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  max-height: 100vh;
+  max-height: 100%;
   justify-content: center;
   padding: 3rem 5rem 5rem;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .logo {
@@ -41,7 +40,7 @@
   max-height: auto;
   bottom: -12rem;
   left: -30%;
-
+  object-fit: cover;
   animation: splashOnLoad ease-out 1s;
   animation-iteration-count: 1;
 }
@@ -55,10 +54,10 @@
 
 @keyframes logoOnLoad {
   0% {
-    left: 0;
+    left: -15%;
   }
   45% {
-    left: 0;
+    left: -15%;
   }
 
   100% {
@@ -80,24 +79,25 @@
 }
 
 @media screen and (max-width: 1440px) {
-  .block {
-    padding: 1rem 0 0;
+  .container {
+    padding: 1rem 0;
+    height: 100%;
   }
   .logo {
-    display: none;
+    visibility: hidden;
   }
 
   .innerBlock {
     position: absolute;
-    max-height: 100vh;
+    max-height: 100%;
     justify-content: center;
     padding: 2rem 5rem 5rem;
     box-sizing: border-box;
-    overflow: hidden;
   }
   .splash {
     position: relative;
-
+    width: 150%;
+    height: 50%;
     bottom: auto;
     left: 0;
 
@@ -113,11 +113,17 @@
 }
 
 @media screen and (max-width: 860px) {
-  .block {
-    max-width: 1000px;
+  .container {
+    align-items: flex-start;
+    height: 100%;
   }
   .innerBlock {
     padding: 0;
     top: -1rem;
+    overflow: hidden;
+  }
+  .splash {
+    width: 150%;
+    height: 100%;
   }
 }
