--- a/src/router/MainScreenPage/MainScreenPage.module.scss
+++ b/src/router/MainScreenPage/MainScreenPage.module.scss
@@ -1,7 +1,7 @@
 .background {
   width: 100vw;
   height: 100vh;
-  background: var(--black-background-color);
+  // background: var(--black-background-color);
 }
 .mainScreenBlock {
   display: flex;
@@ -15,7 +15,7 @@
     width: 100%;
   }
 }
-
+.sideMenuHidden,
 .sideMenu {
   display: flex;
   flex-flow: column nowrap;
@@ -24,7 +24,13 @@
   width: 100%;
   gap: 1.8rem;
   padding: 1.875rem;
+  padding-right: 2.375rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: var(--black-background-color);
 }
+
+
 .logo {
   text-align: center;
 }
@@ -46,20 +52,40 @@
   flex-flow: row nowrap;
   justify-content: flex-start;
 }
-
+.rightSideShown,
 .rightSide {
   width: 100%;
   height: 100vh;
   background-color: var(--color-white-bg);
   border-radius: 1rem;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .buttonsBlock {
-  gap: 0.5rem;
   color: var(--grey100);
 }
 
 .logoLink {
   padding: 0;
   margin: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .sideMenu {
+    max-width: 100%;
+    width: 100%;
+    gap: 0.5rem;
+  }
+  .sideMenuHidden {
+    display: none;
+  }
+  .rightSide {
+    display: none;
+  }
+  .rightSideShown {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+  }
 }
