--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,3 +65,16 @@ a {
 a:hover {
   color: var(--color-accent);
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
