complete mobile view

--- a/src/router/CalendarPage/CalendarPage.module.scss
+++ b/src/router/CalendarPage/CalendarPage.module.scss
@@ -3,6 +3,10 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   margin: 0 1.875rem;
+  @media (max-width: 1280px) {
+    flex-direction: column;
+    overflow: auto;
+  }
 }
 
 .description {
