--- a/src/components/SettingCard/SettingCard.module.scss
+++ b/src/components/SettingCard/SettingCard.module.scss
@@ -9,6 +9,7 @@
   background-color: var(--color-white);
   border: 1px solid var(--grey150);
   border-radius: 14px;
+  box-sizing: border-box;
 }
 
 .leftSide {
@@ -37,4 +38,20 @@
   max-width: 17.5rem;
   width: 100%;
   justify-content: flex-end;
+}
+
+@media (max-width: 1280px) {
+  .leftSide {
+    flex-flow: row nowrap;
+    word-wrap: break-word;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .settingCard {
+    flex-flow: column nowrap;
+    gap: 1rem;
+  }
+  .rightSide {
+    justify-content: center;
+  }
 }
