--- a/src/router/MainScreenPage/MainScreenPage.module.scss
+++ b/src/router/MainScreenPage/MainScreenPage.module.scss
@@ -1,7 +1,8 @@
+$transitionTime: 0.2s;
+
 .background {
   width: 100vw;
   height: 100vh;
-  // background: var(--black-background-color);
 }
 .mainScreenBlock {
   display: flex;
@@ -30,7 +31,6 @@
   overflow-x: auto;
   background: var(--black-background-color);
 }
-
 
 .logo {
   text-align: center;
@@ -79,6 +79,27 @@
 }
 
 @media screen and (max-width: 1280px) {
+  @keyframes spin {
+    100% {
+      -webkit-transform: rotate(90deg);
+      transform: rotate(90deg);
+    }
+  }
+  .closeButton {
+    cursor: pointer;
+    padding: 0.2rem;
+    border-radius: 0.5rem;
+    transition: transform $transitionTime ease-in;
+    &:focus-visible,
+    &:focus-visible,
+    &:focus {
+      outline: var(--focus-outline);
+    }
+    &:hover {
+      transform: rotate(135deg);
+    }
+  }
+
   .sideMenu {
     position: absolute;
     box-sizing: border-box;
@@ -87,20 +108,19 @@
     width: 100%;
     height: 100%;
     gap: 0.5rem;
-    animation: 0.3s ease-in slideout;
-    
+    transition: transform $transitionTime ease-in;
+    transform: translateX(0%);
   }
   .sideMenuHidden {
     max-width: 100%;
     width: 100%;
     gap: 0.5rem;
-    
-    // display: none;
-    // animation: 1s ease-in slidein;
+    transition: transform $transitionTime ease-in;
+    transform: translateX(-100%);
   }
   .rightSide {
-    // display: none;
-    
+    transition: transform $transitionTime ease-in;
+    transform: translateX(100%);
   }
   .rightSideShown {
     display: block;
@@ -108,7 +128,8 @@
     width: 100%;
     border-radius: 0;
     position: absolute;
-    animation: 0.3s ease-in slidein;
+    transition: transform $transitionTime ease-in;
+    transform: translateX(0%);
   }
   body {
     height: 100vh;
@@ -125,24 +146,5 @@
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-  }
-  @keyframes slidein {
-    from {
-      transform: translateX(100%);
-    }
-  
-    to {
-      transform: translateX(0%);
-      display: none;
-    }
-  }
-  @keyframes slideout {
-    from {
-      transform: translateX(-100%);
-    }
-  
-    to {
-      transform: translateX(0%);
-    }
   }
 }
