--- a/src/router/MainScreenPage/MainScreenPage.module.scss
+++ b/src/router/MainScreenPage/MainScreenPage.module.scss
@@ -108,28 +108,21 @@ $transitionTime: 0.2s;
     width: 100%;
     height: 100%;
     gap: 0.5rem;
+  }
+  .sideMenuShown {
     transition: transform $transitionTime ease-in;
     transform: translateX(0%);
   }
   .sideMenuHidden {
-    max-width: 100%;
-    width: 100%;
-    gap: 0.5rem;
     transition: transform $transitionTime ease-in;
     transform: translateX(-100%);
   }
   .rightSide {
-    transition: transform $transitionTime ease-in;
-    transform: translateX(100%);
-  }
-  .rightSideShown {
     display: block;
     max-width: 100%;
     width: 100%;
     border-radius: 0;
     position: absolute;
-    transition: transform $transitionTime ease-in;
-    transform: translateX(0%);
   }
   body {
     height: 100vh;
