--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,18 @@ a:hover {
   color: var(--color-accent);
 }
 
+textarea {
+  border-radius: var(--border-radius);
+  max-width: 400px;
+  min-width: 150px;
+  max-height: 400px;
+  min-height: 45px;
+  width: 100%;
+  border: 1px solid var(--grey200);
+  color: var(--grey600);
+  padding: 0.8rem 8% 0.8rem 1rem;
+}
+
 ::-webkit-scrollbar {
   width: 0.5rem;
 }
