--- a/src/router/AccountPage/AccountPage.module.scss
+++ b/src/router/AccountPage/AccountPage.module.scss
@@ -29,7 +29,7 @@
   }
 }
 
-.accountSetting {
+.accountSettings {
   display: flex;
   flex-flow: column nowrap;
   gap: 1.5rem;
@@ -41,7 +41,7 @@
   box-sizing: border-box;
 }
 
-.innerSettingBlock {
+.settingContainer {
   display: flex;
   flex-flow: row nowrap;
   gap: 1.5rem;
@@ -58,7 +58,7 @@
     gap: 0.5rem;
   }
 }
-.innerDescriptionBlock {
+.title {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -70,7 +70,7 @@
   }
 }
 
-.uploadImage {
+.setting {
   display: flex;
   flex-flow: column nowrap;
   max-width: 400px;
