add customizable calendar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
   --color-heading: #39434f;
   --color-text: #808b9a;
   --color-link: #1b85f3;
+  --blue100: #D1E6FF;
+  --blue500: #1B85F3;
   --grey150: #eceff2;
   --grey200: #d9dfe6;
   --grey300: #c6ced9;
