--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,9 @@
   --color-heading: #39434f;
   --color-text: #808b9a;
   --color-link: #1b85f3;
-  --blue100: #D1E6FF;
-  --blue500: #1B85F3;
+  --blue100: #d1e6ff;
+  --blue500: #1b85f3;
+  --grey100: #f7fafc;
   --grey150: #eceff2;
   --grey200: #d9dfe6;
   --grey300: #c6ced9;
